feat: adiciona gestão administrativa paginada